--- a/infra/ansible/roles/knot-authoritative/tasks/main.yaml
+++ b/infra/ansible/roles/knot-authoritative/tasks/main.yaml
@@ -43,9 +43,7 @@
   ansible.builtin.git:
     repo: "https://github.com/nycmeshnet/nycmesh-dns.git"
     dest: /root/nycmesh-dns
-    version: james/infra4
-    # version: master
-    # JBOTODO cleanup
+    version: master
 
 - name: Run deploy script
   ansible.builtin.command:
