--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,7 +20,7 @@ jobs:
     with:
       environment: dev_jon
     secrets: inherit
-    #if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+    ##if: github.ref == 'refs/heads/master' && github.event_name == 'push'
 
   deploy_sn3_prod:
     name: Deploy to sn3 prod
