--- a/infra/ansible/roles/knot-authoritative/tasks/main.yaml
+++ b/infra/ansible/roles/knot-authoritative/tasks/main.yaml
@@ -43,7 +43,9 @@
   ansible.builtin.git:
     repo: "https://github.com/nycmeshnet/nycmesh-dns.git"
     dest: /root/nycmesh-dns
-    version: master
+    version: james/a_records_other_domains
+    # version: master
+    # JBOTODO cleanup
 
 - name: Run deploy script
   ansible.builtin.command:
