--- a/infra/ansible/roles/knot-recursive/tasks/main.yaml
+++ b/infra/ansible/roles/knot-recursive/tasks/main.yaml
@@ -51,6 +51,11 @@
     search_string: Restart=
     line: "Restart=always"
 
+- name: Setup DoH
+  ansible.builtin.include_tasks:
+    file: doh.yaml
+  when: DOH_SERVER != ""
+
 - name: Fix kres-cache-gc.service
   ansible.builtin.lineinfile:
     dest: /etc/systemd/system/kresd.target.wants/kres-cache-gc.service
