--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,9 +4,8 @@ on:
   push:
     branches:
       - master
-      - james/doh2
-    # paths:
-    #   - infra/**
+    paths:
+      - infra/**
   workflow_dispatch:
     branches:
       - master
@@ -20,7 +19,7 @@ jobs:
     with:
       environment: dev_jon
     secrets: inherit
-    #if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
 
   deploy_sn3_prod:
     name: Deploy to sn3 prod
