--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -3,8 +3,6 @@ name: "Pull Request"
 
 on:
   pull_request:
-    paths:
-      - 'sld/**'
 
 permissions: read-all
 
@@ -13,8 +11,8 @@ defaults:
     working-directory: sld
 
 jobs:
-  terraform:
-    name: "Terraform"
+  validations:
+    name: "Validate"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -26,5 +24,10 @@ jobs:
           terraform_version: 1.8.3
 
       - name: Terraform format
-        id: fmt
         run: terraform fmt -check
+      
+      - name: Setup kzonecheck
+        run: apt-get update && apt-get install -y knot-dnsutils
+      
+      - name: Run kzonecheck on each zone file
+        run: find . -type f -name "*.zone" -exec kzonecheck {} ';'
