--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -30,4 +30,4 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y knot-dnsutils
       
       - name: Run kzonecheck on each zone file
-        run: find . -type f -name "*.zone" -exec kzonecheck {} ';'
+        run: find . -type f -name "*.zone" -print0 | xargs -0L1 kzonecheck
