--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,6 +9,7 @@ on:
   workflow_dispatch:
     branches:
       - master
+  pull_request:
 
 permissions: read-all
 
@@ -20,6 +21,15 @@ jobs:
       environment: dev_jon
     secrets: inherit
     if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+
+  deploy_sn10_prod:
+    name: Deploy to sn10 prod
+    uses: ./.github/workflows/deploy_dns_environment.yaml
+    #needs: deploy_jon
+    with:
+      environment: prod_sn10
+    secrets: inherit
+    #if: github.ref == 'refs/heads/master' && github.event_name == 'push'
 
   deploy_sn3_prod:
     name: Deploy to sn3 prod
