--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,7 +9,6 @@ on:
   workflow_dispatch:
     branches:
       - master
-  pull_request:
 
 permissions: read-all
 
@@ -25,11 +24,11 @@ jobs:
   deploy_sn10_prod:
     name: Deploy to sn10 prod
     uses: ./.github/workflows/deploy_dns_environment.yaml
-    #needs: deploy_jon
+    needs: deploy_jon
     with:
       environment: prod_sn10
     secrets: inherit
-    #if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
 
   deploy_sn3_prod:
     name: Deploy to sn3 prod
