Add kzonecheck to pr build (#138)
* Add kzonecheck to pr

* sudo make me a sandwich

* intentionally bad change to test

* xargs to capture exit code

* fix

* Revert "intentionally bad change to test"

This reverts commit 3fd9d66572a9ea64554c29fea9c86611f8a07832.

* package

* bad test change

* fix

* Revert "bad test change"

This reverts commit 0b227676b72548cd72a0229752aaec1fe7065b52.

--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -3,18 +3,12 @@ name: "Pull Request"
 
 on:
   pull_request:
-    paths:
-      - 'sld/**'
 
 permissions: read-all
 
-defaults:
-  run:
-    working-directory: sld
-
 jobs:
-  terraform:
-    name: "Terraform"
+  validations:
+    name: "Validate"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -26,5 +20,11 @@ jobs:
           terraform_version: 1.8.3
 
       - name: Terraform format
-        id: fmt
         run: terraform fmt -check
+        working-directory: sld
+      
+      - name: Setup kzonecheck
+        run: sudo apt-get update && sudo apt-get install -y knot-dnsutils
+      
+      - name: Run kzonecheck on each zone file
+        run: find . -type f -name "*.zone" -print0 | xargs -0L1 kzonecheck -v
