--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - james/sn10
     paths:
       - infra/**
   workflow_dispatch:
@@ -28,7 +29,7 @@ jobs:
     with:
       environment: prod_sn10
     secrets: inherit
-    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+    #if: github.ref == 'refs/heads/master' && github.event_name == 'push'
 
   deploy_sn3_prod:
     name: Deploy to sn3 prod
@@ -37,4 +38,4 @@ jobs:
     with:
       environment: prod_sn3
     secrets: inherit
-    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+    #if: github.ref == 'refs/heads/master' && github.event_name == 'push'
