--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -34,7 +34,7 @@ jobs:
   deploy_sn3_prod:
     name: Deploy to sn3 prod
     uses: ./.github/workflows/deploy_dns_environment.yaml
-    #needs: deploy_sn10_prod
+    needs: deploy_sn10_prod
     with:
       environment: prod_sn3
     secrets: inherit
