--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - master
-      - james/sn10
     paths:
       - infra/**
   workflow_dispatch:
@@ -25,17 +24,17 @@ jobs:
   deploy_sn10_prod:
     name: Deploy to sn10 prod
     uses: ./.github/workflows/deploy_dns_environment.yaml
-    #needs: deploy_jon
+    needs: deploy_jon
     with:
       environment: prod_sn10
     secrets: inherit
-    #if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
 
   deploy_sn3_prod:
     name: Deploy to sn3 prod
     uses: ./.github/workflows/deploy_dns_environment.yaml
-    #needs: deploy_sn10_prod
+    needs: deploy_sn10_prod
     with:
       environment: prod_sn3
     secrets: inherit
-    #if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
