--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,10 +21,19 @@ jobs:
     secrets: inherit
     if: github.ref == 'refs/heads/master' && github.event_name == 'push'
 
+  deploy_sn10_prod:
+    name: Deploy to sn10 prod
+    uses: ./.github/workflows/deploy_dns_environment.yaml
+    needs: deploy_jon
+    with:
+      environment: prod_sn10
+    secrets: inherit
+    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+
   deploy_sn3_prod:
     name: Deploy to sn3 prod
     uses: ./.github/workflows/deploy_dns_environment.yaml
-    needs: deploy_jon
+    needs: deploy_sn10_prod
     with:
       environment: prod_sn3
     secrets: inherit
