cleanup DD log setup

--- a/infra/ansible/roles/dns-telegraf/tasks/datadog.yaml
+++ b/infra/ansible/roles/dns-telegraf/tasks/datadog.yaml
@@ -6,20 +6,12 @@
     datadog_site: "{{ DATADOG_SITE }}"
     datadog_config:
       logs_enabled: true
-
-- name: Adding dd-agent to systemd-journal 
-  ansible.builtin.user:
-    name: dd-agent
-    groups: systemd-journal
-    append: true
-    create_home: false
-
-- name: Datadog logging config
-  ansible.builtin.copy:
-    src: files/journald.d_conf.yaml
-    dest: /etc/datadog-agent/conf.d/journald.d/conf.yaml
-    owner: dd-agent
-    group: dd-agent
+    datadog_additional_groups: "systemd-journal"
+    datadog_checks:
+      journald:
+        logs:
+          - type: journald
+            path: /var/log/journal/
 
 - name: Reload datadog
   ansible.builtin.systemd_service:
