--- a/infra/ansible/dns_server.yaml
+++ b/infra/ansible/dns_server.yaml
@@ -2,18 +2,18 @@
   hosts: knot-authoritative
   become: true
   roles:
-    - role: dns-ssh
-    - role: dns-frr
-    - role: dns-telegraf
-    - role: knot-authoritative
-    - role: support-account
+    - role: dns_ssh
+    - role: dns_frr
+    - role: dns_telegraf
+    - role: knot_authoritative
+    - role: support_account
 
 - name: Knot recursive
   hosts: knot-recursive
   become: true
   roles:
-    - role: dns-ssh
-    - role: knot-recursive
-    - role: dns-frr
-    - role: dns-telegraf
-    - role: support-account
+    - role: dns_ssh
+    - role: knot_recursive
+    - role: dns_frr
+    - role: dns_telegraf
+    - role: support_account
