--- a/infra/ansible/roles/dns_telegraf/tasks/main.yaml
+++ b/infra/ansible/roles/dns_telegraf/tasks/main.yaml
@@ -9,11 +9,13 @@
   ansible.builtin.get_url:
     url: https://repos.influxdata.com/influxdata-archive_compat.key
     dest: /root/influxdata-archive_compat.key
+    mode: "600"
 
 - name: Check influx gpg key
   ansible.builtin.command:
     chdir: /root
     cmd: bash -c "echo '393e8779c89ac8d958f81f942f9ad7fb82a25e133faddaf92e15b16e6ac9ce4c influxdata-archive_compat.key' | sha256sum -c"
+    creates: /tmp/fake_for_linter
 
 - name: Add influx gpg key
   ansible.builtin.command:
@@ -26,6 +28,7 @@
     path: /etc/apt/sources.list.d/influxdata.list
     line: "deb [signed-by=/etc/apt/trusted.gpg.d/influxdata-archive_compat.gpg] https://repos.influxdata.com/debian stable main"
     create: true
+    mode: "644"
 
 - name: Install telegraf
   ansible.builtin.apt:
@@ -41,8 +44,9 @@
 
 - name: Telegraf Config
   ansible.builtin.template:
-    src: ../templates/telegraf.conf.j2
+    src: telegraf.conf.j2
     dest: /etc/telegraf/telegraf.conf
+    mode: "644"
 
 - name: Allow restarting of telegraf
   ansible.builtin.lineinfile:
