--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -34,5 +34,5 @@ jobs:
         with:
           args: ""
           setup_python: "true"
-          working_directory: "./ansible/"
+          working_directory: "./infra/ansible/"
           requirements_file: ""
