--- a/infra/ansible/roles/dns_ospf/tasks/main.yaml
+++ b/infra/ansible/roles/dns_ospf/tasks/main.yaml
@@ -5,7 +5,6 @@
     pkg:
       - iptables-persistent
       - cron
-      - bird2
 
 - name: Netplan dummy0 interface
   ansible.builtin.template:
@@ -68,26 +67,15 @@
     state: present
     reload: true
 
-- name: Bird config
-  ansible.builtin.template:
-    src: bird.conf.j2
-    dest: /etc/bird/bird.conf
-    mode: "640"
-    owner: "bird"
-    group: "bird"
-
 - name: Stop and disable frr service
   ansible.builtin.systemd_service:
     name: frr
     state: stopped
     enabled: false
 
-- name: Reload bird
-  ansible.builtin.systemd_service:
-    name: bird
-    state: reloaded
-    enabled: true
-    daemon_reload: true
+- name: Import the bird_basic role from the nycmesh.common collection
+  ansible.builtin.import_role:
+    name: nycmesh.common.bird2_basic
 
 - name: Remove file
   ansible.builtin.file:
