--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - master
-      - james/prox_tsig
     paths:
       - infra/**
   workflow_dispatch:
@@ -18,7 +17,7 @@ jobs:
     with:
       environment: dev_jon
     secrets: inherit
-    # if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
 
   deploy_sn10_prod:
     name: Deploy to sn10 prod
