--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,8 +4,9 @@ on:
   push:
     branches:
       - master
-    paths:
-      - infra/**
+      - james/tsig_keys
+    # paths:
+    #   - infra/**
   workflow_dispatch:
 
 permissions: read-all
@@ -31,8 +32,8 @@ jobs:
   deploy_sn3_prod:
     name: Deploy to sn3 prod
     uses: ./.github/workflows/deploy_dns_environment.yaml
-    needs: deploy_sn10_prod
+    # needs: deploy_sn10_prod
     with:
       environment: prod_sn3
     secrets: inherit
-    if: github.ref == 'refs/heads/master'
+    # if: github.ref == 'refs/heads/master'
