--- a/.github/workflows/deploy_dns_environment.yaml
+++ b/.github/workflows/deploy_dns_environment.yaml
@@ -21,7 +21,7 @@ env:
   TF_VAR_tsig_key_building: "${{ secrets.TF_VAR_TSIG_KEY_BUILDING }}"
   TF_VAR_tsig_key_jamesinternaldev3: "${{ secrets.TF_VAR_TSIG_KEY_JAMESINTERNALDEV3 }}"
   TF_VAR_tsig_key_jamesinternalprod2: "${{ secrets.TF_VAR_TSIG_KEY_JAMESINTERNALPROD2 }}"
-  TF_VAR_tsig_key_homeassistant: "${{ secrets.TF_VAR_TSIG_KEY_HOMEASSISTANT }}"
+  TF_VAR_tsig_key_ha: "${{ secrets.TF_VAR_TSIG_KEY_HOMEASSISTANT }}"
   TF_VAR_tsig_key_grandmox: "${{ secrets.TF_VAR_TSIG_KEY_GRANDMOX }}"
   TF_VAR_tsig_key_jon: "${{ secrets.TF_VAR_TSIG_KEY_JON }}"
   TF_VAR_tsig_key_10_r630_01: "${{ secrets.TF_VAR_TSIG_KEY_10_R630_01 }}"
