--- a/infra/ansible/roles/knot_authoritative/tasks/main.yaml
+++ b/infra/ansible/roles/knot_authoritative/tasks/main.yaml
@@ -1,3 +1,27 @@
+- name: Download knot gpg key
+  ansible.builtin.get_url:
+    url: https://pkg.labs.nic.cz/gpg
+    dest: /usr/share/keyrings/cznic-labs-pkg.gpg
+    mode: "0644"
+    owner: root
+    group: root
+
+- name: Setup knot apt repo
+  ansible.builtin.file:
+    src: cznic-labs-knot-dns.list
+    dest: /etc/apt/sources.list.d/cznic-labs-knot-dns.lists
+    mode: "644"
+    owner: root
+    group: root
+
+- name: Pin knot package
+  ansible.builtin.file:
+    src: knot.apt.preferences.txt
+    dest: /etc/apt/preferences.d/knot
+    mode: "644"
+    owner: root
+    group: root
+
 - name: Install deps
   ansible.builtin.apt:
     lock_timeout: 240
