--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,9 +4,8 @@ on:
   push:
     branches:
       - master
-      - james/nn_tsig
-    # paths:
-    #   - infra/**
+    paths:
+      - infra/**
   workflow_dispatch:
 
 permissions: read-all
@@ -18,7 +17,7 @@ jobs:
     with:
       environment: dev_jon
     secrets: inherit
-    # if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master'
 
   deploy_sn10_prod:
     name: Deploy to sn10 prod
