update master to main

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,7 +3,7 @@ name: Deploy
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - infra/**
   workflow_dispatch:
@@ -17,7 +17,7 @@ jobs:
     with:
       environment: dev_jon
     secrets: inherit
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
 
   deploy_sn10_prod:
     name: Deploy to sn10 prod
@@ -26,7 +26,7 @@ jobs:
     with:
       environment: prod_sn10
     secrets: inherit
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
 
   deploy_sn3_prod:
     name: Deploy to sn3 prod
@@ -35,4 +35,4 @@ jobs:
     with:
       environment: prod_sn3
     secrets: inherit
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
