--- a/infra/ansible/roles/knot_authoritative/tasks/main.yaml
+++ b/infra/ansible/roles/knot_authoritative/tasks/main.yaml
@@ -67,7 +67,7 @@
   ansible.builtin.git:
     repo: "https://github.com/nycmeshnet/nycmesh-dns.git"
     dest: /root/nycmesh-dns
-    version: master
+    version: main
 
 - name: Run deploy script
   ansible.builtin.command:
