--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - james/sn11
     paths:
       - infra/**
   workflow_dispatch:
@@ -19,10 +20,19 @@ jobs:
     secrets: inherit
     if: github.ref == 'refs/heads/main'
 
+  deploy_sn11_prod:
+    name: Deploy to sn10 prod
+    uses: ./.github/workflows/deploy_dns_environment.yaml
+    # needs: deploy_jon
+    with:
+      environment: prod_sn11
+    secrets: inherit
+    # if: github.ref == 'refs/heads/main'
+
   deploy_sn10_prod:
     name: Deploy to sn10 prod
     uses: ./.github/workflows/deploy_dns_environment.yaml
-    needs: deploy_jon
+    needs: deploy_sn11_prod
     with:
       environment: prod_sn10
     secrets: inherit
