--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - james/sn11
     paths:
       - infra/**
   workflow_dispatch:
@@ -23,11 +22,11 @@ jobs:
   deploy_sn11_prod:
     name: Deploy to sn11 prod
     uses: ./.github/workflows/deploy_dns_environment.yaml
-    # needs: deploy_jon
+    needs: deploy_jon
     with:
       environment: prod_sn11
     secrets: inherit
-    # if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
 
   deploy_sn10_prod:
     name: Deploy to sn10 prod
