--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,7 +18,7 @@ jobs:
     with:
       environment: dev_jon
     secrets: inherit
-  #  if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
 
   deploy_sn11_prod:
     name: Deploy to sn11 prod
@@ -41,8 +41,8 @@ jobs:
   deploy_sn3_prod:
     name: Deploy to sn3 prod
     uses: ./.github/workflows/deploy_dns_environment.yaml
-    needs: deploy_sn10_prod
+    # needs: deploy_sn10_prod
     with:
       environment: prod_sn3
     secrets: inherit
-    if: github.ref == 'refs/heads/main'
+  #  if: github.ref == 'refs/heads/main'
