--- a/infra/ansible/roles/knot_authoritative/tasks/main.yaml
+++ b/infra/ansible/roles/knot_authoritative/tasks/main.yaml
@@ -26,7 +26,6 @@
   ansible.builtin.apt:
     lock_timeout: 240
     update_cache: true
-    allow_downgrade: true
     pkg:
       - apt-transport-https
       - ca-certificates
@@ -35,7 +34,7 @@
       - python3-pip
       - python3.11-venv
       - dnsutils
-      - knot #=3.4.8-cznic.1~bookworm
+      - knot=3.4.6-cznic.1~bookworm
 
 - name: Knot DNS Config
   ansible.builtin.template:
