--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,20 +23,20 @@ jobs:
   deploy_sn11_prod:
     name: Deploy to sn11 prod
     uses: ./.github/workflows/deploy_dns_environment.yaml
-    needs: deploy_jon
+    #needs: deploy_jon
     with:
       environment: prod_sn11
     secrets: inherit
-    if: github.ref == 'refs/heads/main'
+    #if: github.ref == 'refs/heads/main'
 
   deploy_sn10_prod:
     name: Deploy to sn10 prod
     uses: ./.github/workflows/deploy_dns_environment.yaml
-    needs: deploy_sn11_prod
+    #needs: deploy_sn11_prod
     with:
       environment: prod_sn10
     secrets: inherit
-    if: github.ref == 'refs/heads/main'
+    #if: github.ref == 'refs/heads/main'
 
   deploy_sn3_prod:
     name: Deploy to sn3 prod
