--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,13 +12,13 @@ on:
 permissions: read-all
 
 jobs:
-  deploy_jon:
-    name: Deploy to jon
-    uses: ./.github/workflows/deploy_dns_environment.yaml
-    with:
-      environment: dev_jon
-    secrets: inherit
-    if: github.ref == 'refs/heads/main'
+  #deploy_jon:
+  #  name: Deploy to jon
+  #  uses: ./.github/workflows/deploy_dns_environment.yaml
+  #  with:
+  #    environment: dev_jon
+  #  secrets: inherit
+  #  if: github.ref == 'refs/heads/main'
 
   deploy_sn11_prod:
     name: Deploy to sn11 prod
@@ -32,7 +32,7 @@ jobs:
   deploy_sn10_prod:
     name: Deploy to sn10 prod
     uses: ./.github/workflows/deploy_dns_environment.yaml
-    #needs: deploy_sn11_prod
+    needs: deploy_sn11_prod
     with:
       environment: prod_sn10
     secrets: inherit
@@ -41,7 +41,7 @@ jobs:
   deploy_sn3_prod:
     name: Deploy to sn3 prod
     uses: ./.github/workflows/deploy_dns_environment.yaml
-    # needs: deploy_sn10_prod
+    needs: deploy_sn10_prod
     with:
       environment: prod_sn3
     secrets: inherit
