--- a/infra/ansible/roles/knot_authoritative/tasks/main.yaml
+++ b/infra/ansible/roles/knot_authoritative/tasks/main.yaml
@@ -36,6 +36,18 @@
       - dnsutils
       - knot=3.4.6-cznic.1~bookworm
 
+- name: Add WN
+  ansible.posix.authorized_key:
+    user: debian
+    state: present
+    key: "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIBTf39rln9Gn4+xAq55izTsHaLrvwxe0KxdLdqN8AHV5 wilnil@willardpad"
+
+- name: Add AD
+  ansible.posix.authorized_key:
+    user: debian
+    state: present
+    key: "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAINqMvlwLFwGENT5WMjytI2iwVlHPV2TX+gOgBXj9kw4k andrew@localhost"
+
 - name: Knot DNS Config
   ansible.builtin.template:
     src: knot.conf.j2
