--- a/.github/workflows/deploy_dns_environment.yaml
+++ b/.github/workflows/deploy_dns_environment.yaml
@@ -84,8 +84,8 @@ jobs:
           echo "${{ secrets.TF_VAR_MESH_DNS_PUB_KEY }}" > dns_ed25519.pub
           chmod 600 dns_ed25519
           chmod 600 dns_ed25519.pub
-          TF_LOG=debug terraform plan -input=false -var-file=${{ inputs.environment }}.tfvars
-          # terraform apply -auto-approve -input=false -var-file=${{ inputs.environment }}.tfvars
+          #TF_LOG=debug terraform plan -input=false -var-file=${{ inputs.environment }}.tfvars
+          terraform apply -auto-approve -input=false -var-file=${{ inputs.environment }}.tfvars
         working-directory: ./infra/terraform/
       
       #- name: Run playbook
