--- a/.github/workflows/deploy_dns_environment.yaml
+++ b/.github/workflows/deploy_dns_environment.yaml
@@ -84,10 +84,9 @@ jobs:
           echo "${{ secrets.TF_VAR_MESH_DNS_PUB_KEY }}" > dns_ed25519.pub
           chmod 600 dns_ed25519
           chmod 600 dns_ed25519.pub
-          terraform plan -input=false -var-file=${{ inputs.environment }}.tfvars
-          # terraform apply -auto-approve -input=false -var-file=${{ inputs.environment }}.tfvars
+          terraform apply -auto-approve -input=false -var-file=${{ inputs.environment }}.tfvars
         working-directory: ./infra/terraform/
       
-      #- name: Run playbook
-      #  run: sleep 45 && export PATH="$HOME/.local/bin:$PATH" && ansible-playbook -i inventory.yaml dns_server.yaml
-      #  working-directory: ./infra/ansible/
+      - name: Run playbook
+        run: sleep 45 && export PATH="$HOME/.local/bin:$PATH" && ansible-playbook -i inventory.yaml dns_server.yaml
+        working-directory: ./infra/ansible/
