--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - wdn/no-jon
     paths:
       - infra/**
   workflow_dispatch:
@@ -12,13 +11,13 @@ on:
 permissions: read-all
 
 jobs:
-  deploy_jon:
-    name: Deploy to jon
-    uses: ./.github/workflows/deploy_dns_environment.yaml
-    with:
-      environment: dev_jon
-    secrets: inherit
-    if: github.ref == 'refs/heads/main'
+  #deploy_jon:
+  #  name: Deploy to jon
+  #  uses: ./.github/workflows/deploy_dns_environment.yaml
+  #  with:
+  #    environment: dev_jon
+  #  secrets: inherit
+  #  if: github.ref == 'refs/heads/main'
 
   deploy_sn11_prod:
     name: Deploy to sn11 prod
@@ -32,11 +31,11 @@ jobs:
   deploy_sn10_prod:
     name: Deploy to sn10 prod
     uses: ./.github/workflows/deploy_dns_environment.yaml
-    #needs: deploy_sn11_prod
+    needs: deploy_sn11_prod
     with:
       environment: prod_sn10
     secrets: inherit
-    #if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
 
   deploy_sn3_prod:
     name: Deploy to sn3 prod
@@ -45,4 +44,4 @@ jobs:
     with:
       environment: prod_sn3
     secrets: inherit
-    #if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
