--- a/.github/workflows/deploy_dns_environment.yaml
+++ b/.github/workflows/deploy_dns_environment.yaml
@@ -78,7 +78,7 @@ jobs:
         run: terraform validate
         working-directory: ./infra/terraform/
 
-      - name: Terraform Plan #Apply
+      - name: Terraform Apply
         run: |
           echo "${{ secrets.TF_VAR_MESH_DNS_SSH_KEY }}" > dns_ed25519
           echo "${{ secrets.TF_VAR_MESH_DNS_PUB_KEY }}" > dns_ed25519.pub
