--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - wdn/hijon
     paths:
       - infra/**
   workflow_dispatch:
@@ -11,13 +12,13 @@ on:
 permissions: read-all
 
 jobs:
-  #deploy_jon:
-  #  name: Deploy to jon
-  #  uses: ./.github/workflows/deploy_dns_environment.yaml
-  #  with:
-  #    environment: dev_jon
-  #  secrets: inherit
-  #  if: github.ref == 'refs/heads/main'
+  deploy_jon:
+    name: Deploy to jon
+    uses: ./.github/workflows/deploy_dns_environment.yaml
+    with:
+      environment: dev_jon
+    secrets: inherit
+    if: github.ref == 'refs/heads/main'
 
   deploy_sn11_prod:
     name: Deploy to sn11 prod
