Fix -with- iteration
Signed-off-by: scottongithub <21364725+scottongithub@users.noreply.github.com>

--- a/infra/ansible/roles/knot_recursive/tasks/main.yaml
+++ b/infra/ansible/roles/knot_recursive/tasks/main.yaml
@@ -13,7 +13,8 @@
     user: debian
     state: present
     key: '{{ item }}'
-  with_file: trusted_ssh_keys
+  with_file:
+    - "trusted_ssh_keys"
 
 
 - name: Download gpg key
