Update pinning for dns-auth
Signed-off-by: scottongithub <21364725+scottongithub@users.noreply.github.com>

--- a/infra/ansible/roles/knot_authoritative/tasks/main.yaml
+++ b/infra/ansible/roles/knot_authoritative/tasks/main.yaml
@@ -34,7 +34,7 @@
       - python3-pip
       - python3.11-venv
       - dnsutils
-      - knot=3.4.6-cznic.1~bookworm
+      - knot
 
 # - name: Add WN
 #   ansible.posix.authorized_key:
