Change git branch from main to scott/devjon for deploy_knot.sh
Signed-off-by: scottongithub <21364725+scottongithub@users.noreply.github.com>

--- a/infra/ansible/roles/knot_authoritative/tasks/main.yaml
+++ b/infra/ansible/roles/knot_authoritative/tasks/main.yaml
@@ -87,7 +87,7 @@
   ansible.builtin.git:
     repo: "https://github.com/nycmeshnet/nycmesh-dns.git"
     dest: /root/nycmesh-dns
-    version: main
+    version: scott/devjon
 
 - name: Run deploy script
   ansible.builtin.command:
