Add trusted ssh keys file
Signed-off-by: scottongithub <21364725+scottongithub@users.noreply.github.com>

--- a/infra/ansible/roles/knot_recursive/tasks/main.yaml
+++ b/infra/ansible/roles/knot_recursive/tasks/main.yaml
@@ -7,6 +7,13 @@
       - ca-certificates
       - dnsutils
 
+- name: Add trusted SSH keys
+  ansible.posix.authorized_key:
+    user: debian
+    state: present
+    key: '{{ item }}'
+  with_file: trusted_ssh_keys
+
 - name: Download gpg key
   ansible.builtin.get_url:
     url: https://pkg.labs.nic.cz/gpg
