--- a/infra/ansible/roles/dns_ospf/tasks/main.yaml
+++ b/infra/ansible/roles/dns_ospf/tasks/main.yaml
@@ -1,14 +1,9 @@
-- name: Add WN
+- name: Add trusted SSH keys
   ansible.posix.authorized_key:
     user: debian
     state: present
-    key: "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIBTf39rln9Gn4+xAq55izTsHaLrvwxe0KxdLdqN8AHV5 wilnil@willardpad"
-
-- name: Add AD
-  ansible.posix.authorized_key:
-    user: debian
-    state: present
-    key: "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAINqMvlwLFwGENT5WMjytI2iwVlHPV2TX+gOgBXj9kw4k andrew@localhost"
+    key: '{{ item }}'
+  with_file: trusted_ssh_keys
 
 - name: Install deps
   ansible.builtin.apt:
