Fix trusted_ssh_keys yaml notation
Signed-off-by: scottongithub <21364725+scottongithub@users.noreply.github.com>

--- a/infra/ansible/roles/knot_authoritative/tasks/main.yaml
+++ b/infra/ansible/roles/knot_authoritative/tasks/main.yaml
@@ -41,7 +41,8 @@
     user: debian
     state: present
     key: '{{ item }}'
-  with_file: trusted_ssh_keys
+  with_file:
+    - "trusted_ssh_keys"
 
 - name: Knot DNS Config
   ansible.builtin.template:
