--- a/infra/ansible/roles/dns_ospf/tasks/main.yaml
+++ b/infra/ansible/roles/dns_ospf/tasks/main.yaml
@@ -3,7 +3,8 @@
     user: debian
     state: present
     key: '{{ item }}'
-  with_file: trusted_ssh_keys
+  with_file:
+    - "trusted_ssh_keys"
 
 - name: Install deps
   ansible.builtin.apt:
