--- a/infra/ansible/roles/knot_recursive/tasks/main.yaml
+++ b/infra/ansible/roles/knot_recursive/tasks/main.yaml
@@ -12,7 +12,8 @@
     user: debian
     state: present
     key: '{{ item }}'
-  with_file: trusted_ssh_keys
+  with_file:
+    - "trusted_ssh_keys"
 
 - name: Download gpg key
   ansible.builtin.get_url:
