--- a/.github/workflows/deploy_dns_environment.yaml
+++ b/.github/workflows/deploy_dns_environment.yaml
@@ -53,15 +53,11 @@ jobs:
         with:
           terraform_version: 1.8.3
 
-      - name: Setup WireGuard
-        run:  |
-          sudo apt-get update && sudo apt-get install -y wireguard
-          echo "${{ secrets.WIREGUARD_PRIVATE_KEY }}" > privatekey
-          sudo ip link add dev wg0 type wireguard
-          sudo ip address add dev wg0 ${{ secrets.WIREGUARD_OVERLAY_NETWORK_IP }} peer ${{ secrets.WIREGUARD_PEER }}
-          sudo wg set wg0 listen-port 48123 private-key privatekey peer ${{ secrets.WIREGUARD_PEER_PUBLIC_KEY }} allowed-ips 0.0.0.0/0 endpoint ${{ secrets.WIREGUARD_ENDPOINT }}
-          sudo ip link set up dev wg0
-          rm privatekey
+      - name: Setup NYC Mesh VPN
+        uses: nycmeshnet/nycmesh-vpn-action@main
+        with:
+          config-name: "ghdns"
+          private-key: ${{ secrets.WIREGUARD_PRIVATE_KEY }}
 
       - name: Setup backend
         run: |
