--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - james/fix_deploy_sn3
     paths:
       - infra/**
   workflow_dispatch:
@@ -40,8 +41,8 @@ jobs:
   deploy_sn3_prod:
     name: Deploy to sn3 prod
     uses: ./.github/workflows/deploy_dns_environment.yaml
-    needs: deploy_sn10_prod
+    # needs: deploy_sn10_prod
     with:
       environment: prod_sn3
     secrets: inherit
-    if: github.ref == 'refs/heads/main'
+    # if: github.ref == 'refs/heads/main'
